--- a/githubhomepage.html
+++ b/githubhomepage.html
@@ -366,8 +366,9 @@
         </ul>
       </div>
       <div class="section">
-        <h1>Millions of developers and businesses call GitHub home</h1>
-        <p>
+        <img src="./images/capilot_image-removebg-preview.png" alt="" />
+        <h1 style="width: 70%;">Millions of developers and businesses call GitHub home</h1>
+        <p style="width: 50%;">
           Whether you’re scaling your development process or just learning how
           to code, GitHub is where you belong. Join the world’s most widely
           adopted AI-powered developer platform to build the technologies that
